Remove concierge, add auth
Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -40,8 +40,8 @@ frontend frontend-ssl
   acl player path_beg -i /play
   use_backend player	if player
 
-  acl concierge path_beg -i /concierge
-  use_backend concierge if concierge
+  acl auth path_beg -i /auth
+  use_backend auth	if auth
 
   acl map path_beg -i /map
   use_backend map if map
@@ -71,6 +71,9 @@ frontend frontend-plain
   acl player path_beg -i /play
   use_backend player	if player
 
+  acl auth path_beg -i /auth
+  use_backend auth	if auth
+
   acl room	 path_beg -i /rooms
   use_backend room		if room
 
@@ -79,9 +82,6 @@ frontend frontend-plain
 
   acl roomjs	path_beg -i /roomjs
   use_backend	roomjs	if roomjs
-
-  acl concierge path_beg -i /concierge
-  use_backend concierge if concierge
 
   acl map path_beg -i /map
   use_backend map if map
@@ -104,13 +104,6 @@ backend roomjs
   balance roundrobin
   server roomjs1 192.168.99.100:5000 check
 
-backend concierge
-  mode http
-  option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  balance roundrobin
-  server concierge1 concierge:9080 check
-
 backend map
   mode http
   option httplog
@@ -123,6 +116,13 @@ backend mediator
   option httplog
   balance roundrobin
   server mediator1 mediator:9443 ssl check check-ssl verify none
+
+backend auth
+  mode http
+  option httplog
+  option httpchk GET /auth/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server auth1 auth:9443 ssl check check-ssl verify none
 
 backend player
   mode http
