--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -46,11 +46,11 @@ frontend frontend-ssl
   mode http
   option httplog
 
+  acl auth path_beg -i /auth
+  use_backend auth if auth
+
   acl player path_beg -i /play
   use_backend player	if player
-
-  acl concierge path_beg -i /concierge
-  use_backend concierge if concierge
 
   acl map path_beg -i /map
   use_backend map if map
@@ -91,13 +91,6 @@ backend roomjs
   balance roundrobin
   server room1 PLACEHOLDER_DOCKERHOST:5000 check
 
-backend concierge
-  mode http
-  option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  balance roundrobin
-  server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
-
 backend map
   mode http
   option httplog
@@ -110,6 +103,13 @@ backend mediator
   option httplog
   balance roundrobin
   server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
+
+backend auth
+  mode http
+  option httplog
+  option httpchk GET /auth/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server auth1 PLACEHOLDER_DOCKERHOST:9449 ssl check check-ssl verify none
 
 backend player
   mode http
