First pass amalgam8 integration
Signed-off-by: Ozzy Osborne <ozzy@ca.ibm.com>

--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -4,7 +4,7 @@ global
 	#group haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
-
+  debug
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
 userlist admins
@@ -107,28 +107,36 @@ backend roomjs
 backend map
   mode http
   option httplog
-  option httpchk GET /map/v1/health HTTP/1.1\r\nHost:localhost
+  option httpchk GET /map/map/v1/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server map1 map:9443 ssl check check-ssl verify none
+  acl map2 path_beg -i /map/map
+  http-request set-uri http://%[req.hdr(Host)]/map%[path]?%[query] if !map2
+  server map1 127.0.0.1:6379 check verify none
 
 backend mediator
   mode http
   option httplog
   balance roundrobin
-  server mediator1 mediator:9443 ssl check check-ssl verify none
+  acl mediator2 path_beg -i /mediator/mediator
+  http-request set-uri http://%[req.hdr(Host)]/mediator%[path]?%[query] if !mediator2
+  server mediator1 127.0.0.1:6379 check verify none
 
 backend auth
   mode http
   option httplog
-  option httpchk GET /auth/health HTTP/1.1\r\nHost:localhost
+  option httpchk GET /auth/auth/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server auth1 auth:9443 ssl check check-ssl verify none
+  acl auth2 path_beg -i /auth/auth
+  http-request set-uri http://%[req.hdr(Host)]/auth%[path]?%[query] if !auth2
+  server auth1 127.0.0.1:6379 check verify none
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 player:9443 ssl check check-ssl verify none
+  acl player2 path_beg -i /players/players
+  http-request set-uri http://%[req.hdr(Host)]/players%[path]?%[query] if !player2
+  server player1 127.0.0.1:6379 check verify none
 
 backend static-content
   mode http
