Redirect to interactive map from proxy
Signed-off-by: pavittr <pavittr@uk.ibm.com>

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -70,6 +70,9 @@ frontend frontend-ssl
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
 
+  acl interactivemap path_beg -i /interactivemap
+  http-request redirect location https://gameon-interactivemap.mybluemix.net/interactivemap code 301 if interactivemap
+
   default_backend static-content
 
 frontend frontend-plain
