--- a/haproxy-ics.cfg
+++ b/haproxy-ics.cfg
@@ -32,6 +32,9 @@ frontend frontend-ssl
   mode http
   option httplog
 
+  acl auth path_beg -i /auth
+  use_backend auth if auth
+
   acl player path_beg -i /play
   use_backend player	if player
 
@@ -47,12 +50,18 @@ frontend frontend-ssl
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
 
+  acl interactivemap path_beg -i /interactivemap
+  http-request redirect location https://gameon-interactivemap.mybluemix.net/interactivemap code 301 if interactivemap
+
   default_backend static-content
 
 frontend frontend-plain
   bind *:80
   mode http
   option httplog
+
+  acl auth path_beg -i /auth
+  use_backend auth if auth
 
   acl player path_beg -i /play
   use_backend player	if player
@@ -90,6 +99,13 @@ backend mediator
   option httplog
   balance roundrobin
   server mediator1 ${MEDIATOR_ENDPOINT}:9443 ssl check check-ssl verify none
+
+backend auth
+  mode http
+  option httplog
+  option httpchk GET /auth/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server auth1 PLACEHOLDER_DOCKERHOST:9449 ssl check check-ssl verify none
 
 backend player
   mode http
